# stashit

./: Cargo.toml  README.md
.github/workflows/: build.yml  tests.yml
src/: cli.yaml  lib.rs  main.rs  stash.rs
tests/: integration_test.rs
