[package]
name = "stashit"
version = "0.1.0"
authors = ["Samuel Abreu <samuel.abreu@gastecnologia.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
itertools = "0.10.0"
dirs = "1.0.5"
pretty_env_logger = "0.4.0"
log = "0.4"
ansi_term = "0.12.1"
glob = "0.3.0"
chrono = "0.4"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
